@@ -4,6 +4,7 @@
 - The "endpoint" label is now automatically added to the default HTTP server metrics, containing this endpoint routing route pattern of the request, unless there is a user-defined label already present with this name.
 - HttpRequestLabelNames.All is now HttpRequestLabelNames.Default to better reflect the meaning of the property.
 - Added integration with .NET EventCounters, which can now be easily exposed as Promtheus metrics (see EventCounterAdapter class).
+- Added integration with .NET Meters, which can now be easily exposed as Promtheus metrics (see MeterAdapter class).
 * 5.1.0
 - Add support for adding custom label value providers to HTTP server metrics. #347
 * 5.0.2
